--- a/.github/DISCUSSION_TEMPLATE/support.yml
+++ b/.github/DISCUSSION_TEMPLATE/support.yml
@@ -36,7 +36,7 @@ body:
   - type: textarea
     id: description
     attributes:
-      label: What did you do?
+      label: Problem Description
       description: |
         How to write a good bug report?
 
@@ -57,13 +57,13 @@ body:
     validations:
       required: true
   
-  - type: input
-    id: version
-    attributes:
-      label: Beszel version
-      placeholder: 0.9.1
-    validations:
-      required: true
+#  - type: input
+#    id: version
+#    attributes:
+#      label: Beszel version
+#      placeholder: 0.9.1
+#    validations:
+#      required: true
 
   - type: dropdown
     id: install-method
